Creasol DomBus plugin for Domoticz.
Author: Paolo Subiaco  linux@creasol.it
https://www.creasol.it/domotics
Telegram channel: https://t.me/DomBus  @DomBus

TODO:
Cannot change HWADDR with old modules using protocol=1 (with 0.0.5 it works) 

Creasol DomBus ChangeLog

1.3.9 2024-12-01
	DomBusEVSE: now default EVMAXPOWER value is set to 6000 instead of 3300

1.3.8 2024-07-09
	Added PULSE3 and PULSEUP3 keywords for DCMD command (execute a command
	when the button is pushed for 3-3.9 seconds. Useful with DomBusTH that now
	transmit a short white flash every second, while the button is pushed, to
	distinguish PULSE1, PULSE2, PULSE3, PULSE4.
	PULSEUP3 is the keyword for twinbutton UP (double button UP/DOWN connected
	to a single I/O, with external 4k7 resistor).

	If Debug level is Verbose or Debug, now any DCMD command is logged (both
	DCMD commands to the controller, to activate a scene/group, and DCMD
	commands to other DomBus devices in the same bus).

1.3.7 2024-06-16 Requires Domoticz Beta 2023/2 dd18-9-2023 or next
	EVSE: added a virtual device "EV MaxCurrent" (TypeName=Setpoint) associated to the EVMAXCURRENT 
	parameter that permits to set the maximum charging current easily.
	This parameter is useful during the Summer when Grid Voltage is very high
	and lead to solar inverter power limiting.
	To avoid this trouble, it's possible to charge the vehicle in Solar mode, 
	to use only solar energy, setting a small current (for example 12A in
	single phase, or 6A in three phase), just to reduce the inverter voltage
	preventing inverter power limiting and also prevening EV battery charging
	too quickly when the State-of-Charge is high.
	
	For system where the EVSE module is already active, to get the new EV
	Maxcurrent device created, 
	1. update the Creasol DomBus plugin 
	2. Setup -> Hardware, select DomBus plugin, and click on Update
	3. Enter Switches panel, select "EV Mode" device, save the description