@@ -57,6 +57,24 @@ Then you can find the Creasol DomBus protocol in the **Setup -> Hardware panel**
 
 Now you're ready to connect one *DomBus* device to the RS485 bus, and check the new I/Os in the Switches panel or Setup -> Devices menu.
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ***
 
 ## Creasol DomBus modules
@@ -74,16 +92,21 @@ Modules are available in two version:
 
 [Store website](https://store.creasol.it/domotics) - [Information website](https://www.creasol.it/domotics)
 
+### Youtube video showing DomBus modules 
+[![Creasol DomBus modules video](https://images.creasol.it/intro01_video.png)](https://www.creasol.it/DomBusVideo)
+
+
+
 ### DomBusEVSE - EVSE module to build a Smart Wallbox / EV charging station
-<a href="https://store.creasol.it/DomBusEVSE"><img src="https://images.creasol.it/creDomBusEVSE_200.png" alt="DomBusEVSE smart EVSE module to make a Smart Wallbox EV Charging station" style="float: left; margin-right: 2em;" align="left" /></a>
+<a href="https://store.creasol.it/DomBusEVSE"><img src="https://images.creasol.it/creDomBusEVSE_plug_300.webp" alt="DomBusEVSE smart EVSE module to make a Smart Wallbox EV Charging station" style="float: left; margin-right: 2em;" align="left" /></a>
 Complete solution to make a Smart EVSE, **charging the electric vehicle using only energy from renewable source (photovoltaic, wind, ...), or adding 25-50-75-100% of available power from the grid**.
 
-* Single-phase and three-phases, up to 36A (8kW or 22kW)
+* **Single-phase and three-phase**, up to 32A (8kW or 22kW)
 * Needs external contactor, RCCB (protection) and EV cable
 * Optional power meter to measure charging power, energy, voltage and power factor
 * Optional power meter to measure the power usage from the grid (not needed if already exists)
-* **Two max grid power thresholds** can be programmed: for example, in Italy who have 6kW contractual power can drain from the grid Max (6* 1.27)=7.6kW for max 90 minutes followed by (6* 1.1)=6.6kW for another 90 minutes. **The module can use ALL available power** when programmed to charge at 100%.
-* **Works without the domotic controller** (stand-alone mode), and **can also work with charging current set by the domotic controller (managed mode)**
+* **Two max grid power thresholds** can be programmed: for example, in Italy who have 6kW contractual power can drain from the grid Max (6* 1.27)=7.6kW for max 90 minutes followed by (6* 1.1)=6.6kW for another 90 minutes: in this case **the EVSE module can drain ALL available power** when programmed to charge at 100% **minimizing the charge time and increasing the charging efficiency**.
+* **Works without the domotic controller** (stand-alone mode), and **can also work in *managed mode*, with an automation in the home automation system setting the charging current**
 
 <br clear="all"/>
 
@@ -106,6 +129,14 @@ Includes:
 * counters (water, gas, S0 energy, ...)
 * NTC temperature and ultrasonic distance sensors
 * 2 ports are configured by default as open-drain output and can drive up to 200mA led strip (with dimming function) or can be connected to the external module DomRelay2 to control 2 relays.
+<br clear="all"/>
+
+### DomBus21 - Latching relays domotic module
+<a href="https://store.creasol.it/DomBus21"><img src="https://images.creasol.it/creDomBus21_400.webp" alt="DomBus21 domotic module with 3 latching relays, 1 AC input and 4 low voltage inputs" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
+Very compact domotic module providing:
+* **3x latching relays SPST, max current 15A (3kW): no power consumption when relays are On or Off!**
+* 1x 230V AC opto-isolated input to detect 230V and power outage, with **zero-detection to switch relays/loads minimizing in-rush current**
+* 4x I/O lines, configurable as analog/digital inputs, temperature/distance sensor, counter, meter, ...
 <br clear="all"/>
 
 ### DomBus23 - Domotic module with many functions
@@ -159,30 +190,48 @@ DIN rail module, low profile, with **12 relays outputs and very low power consum
 
 ### DomBus37 - 12 inputs, 3 115/230Vac inputs, 3 relay outputs
 <a href="https://store.creasol.it/DomBus37"><img src="https://images.creasol.it/creDomBus37_400.webp" alt="DomBus37 domotic module with 12 inputs, 3 AC inputs, 3 relay outputs" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
-Module designed to be connected to alarm sensors (magnetc contact sensors, PIRs, tampers): it's able to monitor mains power supply (power outage / blackout) and also have 3 relays outputs.
-* 12x low voltage inputs (analog/digital inputs, buttons, alarm sensors, counters, temperature and distance sensors, ...)
+Module designed to **interface alarm sensors (magnetc contact sensors, PIRs, tampers): it's able to monitor mains power supply (power outage / blackout) and also have 3 relays outputs.**
+* 12x low voltage inputs (analog/digital inputs, buttons, alarm sensors, balanced double/triple biased alarm sensors,  counters, meters, temperature and distance sensors, ...)
 * 3x 115/230Vac optoisolated inputs
 * 2x relays SPST 5A
 * 1x relay SPST 10A
-* In12 port can be used to send power supply to an external siren, monitoring current consumption
+<br clear="all"/>
+
+### DomBus38 - 12 inputs, 1 100-250Vac input, 6 relay outputs
+<a href="https://store.creasol.it/DomBus38"><img src="https://images.creasol.it/creDomBus38_400.webp" alt="DomBus38 smart home module with 12 inputs, 1 AC input, 6 SPDT relay outputs + 2 SPDT relay outputs 10A" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
+Module designed to **interface alarm sensors (magnetc contact sensors, PIRs, tampers), lights and appliances outputs, ...**
+* 12x low voltage inputs (analog/digital inputs, buttons, alarm sensors, balanced double/triple biased alarm sensors, counters, meters, temperature and distance sensors, ...)
+* 1x 115/230Vac optoisolated input to detect power outage and for zero-crossing detection (to switch relays minimizing the in-rush current)
+* 4x relays SPDT 10A (with Normally Open and Normally Closed contacts)
+* 2x relays SPST 10A (with only Normally Open contacts)
+<br clear="all"/>
+
+### DomBusTracker - Dual axis sun tracker controller working with Domoticz, Home Assistant, Node-RED, Modbus, ... and also working in standalone with no external controllers
+<a href="https://store.creasol.it/DomBusTracker"><img src="https://images.creasol.it/creDomBusTracker_sun_400.webp" alt="DomBusTracker smart home module that controls 2 linear actuators in a solar tracking system" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
+Module that **check a deep-hole sun sensor to detect the direction of maximal sun radiation, working also in case of cloudy weather.**
+* Controls two external actuators/motors (linear or not) to move motors to reach the best tilt / elevation and azimuth position to optimize photovoltaic production.
+* **Check current through the motors to detect internal limit switch** (useful for linear actuators) and find where the tracker reach the final/initial position.
+* **Works autonomously** (stand-alone), without any home automation system controller, but **also can be interface by Domoticz** (DomBus protocol) and **Home Assistant, NodeRED, OpenHAB,** ... (using Modbus protocol).
+* Wire connection (RS485) to the domotic controller for the best reliability.
 <br clear="all"/>
 
 ### DomRelay2 - 2x relays board
 <a href="https://store.creasol.it/DomRelay2"><img src="https://images.creasol.it/creDomRelay22_200.png" alt="Relay board with 2 relays, to be used with DomBus domotic modules" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
-Simple module with 2 relays, to be used with DomBus modules or other electronic boards with open-collector or open-drain outputs
-* 2x 5A 12V SPST relays (Normally Open contact)
+Simple module with 2 relays, to be used with DomBus modules (like <a href="https://store.creasol.it/DomBusTH">DomBusTH</a> and <a href="https://store.creasol.it/DomBus12">DomBus12</a>) or other electronic boards with open-collector or open-drain outputs
+* **2x SPST relays 5A** (Normally Open contact)
 * Overvoltage protection (for inductive loads, like motors)
 * Overcurrent protection (for capacitive laods, like AC/DC power supply, LED bulbs, ...)
 <br clear="all"/>
 
 ### DomESP1 / DomESP2 - Board with relays and more for ESP8266 NodeMCU WiFi module
 <a href="https://store.creasol.it/DomESP1"><img src="https://images.creasol.it/creDomESP2_400.webp" alt="Relay board for ESP8266 NodeMCU module" style="float: left; margin-right: 2em; vertical-align: middle;" align="left" /></a>
-IoT board designed for NodeMCU v3 board using ESP8266 WiFi microcontroller
-* 9-24V input voltage, with high efficiency DC/DC regulator with 5V output
-* 4x SPST relays 5V with overvoltage protection
-* 1x SSR output (max 40V output)
-* 2x mosfet output (max 30V, 10A) for LED dimming or other DC loads
+**IoT board designed for NodeMCU v3 board using ESP8266 WiFi microcontroller**
+* 9÷24V power supply input, with high efficiency DC/DC regulator with 5V output
+* **4x SPST relays 5A with overvoltage protection** (varistor)
+* **2x mosfet outputs** (max 30V, 10A) for LED dimming or other DC loads
 * 1x I²C interface for sensors, extended I/Os and more)
 * 1x OneWire interface (DS18B20 or other 1wire sensors/devices)
 <br clear="all"/>
+
+
 
