@@ -11,6 +11,11 @@ Creasol DomBus ChangeLog
 1.3.9 2024-12-01
 	DomBusEVSE: now default EVMAXPOWER value is set to 6000 instead of 3300
 
+	kWh meters: when using meters with pulsed output, in case of no pulse the
+	plugin compute the power decay. After 1 hour without pulses, power now is
+	set to 0.
+	Also, domoticz device is still updated even if power=0.
+
 1.3.8 2024-07-09
 	Added PULSE3 and PULSEUP3 keywords for DCMD command (execute a command
 	when the button is pushed for 3-3.9 seconds. Useful with DomBusTH that now
